0023250: Missing include in OSD_MemInfo.cxx

Function getpid() declared in "unistd.h" header on POSIX-compliant systems.
Fix compilation error with gcc 4.7 on Linux.